Changes in pom.xml - to run SWTBot UI tests