@@ -12,5 +12,30 @@
 	<artifactId>org.eclipse.emf.query2.index.ui.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<name>EMF Query2 Index UI Tests</name>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.tycho</groupId>
+				<artifactId>maven-osgi-test-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<testSuite>org.eclipse.emf.query2.index.ui.test</testSuite>
+					<testClass>org.eclipse.emf.query2.index.ui.test.IndexUITestSuite</testClass>
+					<useUIHarness>true</useUIHarness> 
+					<argLine>-Xms128m -Xmx512m -XX:MaxPermSize=256m</argLine>
+					<product>org.eclipse.sdk.ide</product>
+					<application>org.eclipse.ui.ide.workbench</application>
+					<dependencies>
+						<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.eclipse.sdk.ide</artifactId>
+							<version>0.0.0</version>
+						</dependency>
+					</dependencies>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
